--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,29 @@
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
 } 
+.Calculadora{
+    position: absolute;
+    background-color: rgba(222, 219, 219, 0.7);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 15px;
+    padding: 15px;
+    font-size: 20px;
+}
+.botao{
+    width: 50px;
+    height: 50px;
+    margin: 3px;
+    font-size: 25px;
+    cursor: pointer;
+    background-color: grey;
+    border: none;
+    color: black;
+}
+.botao:hover{
+    background-color: cyan;
+    color: purple;
+}
+    
+
