--- a/styles.css
+++ b/styles.css
@@ -33,5 +33,14 @@
     background-color: cyan;
     color: purple;
 }
+#resultado{
+    background-color: white;
+    width: 207px;
+    height: 30px;
+    margin: 5px;
+    color: black;
+    text-align: right;
+    padding: 5px;
+}
     
 
